Fixed modal on mobile. Added Drawer Toggle button for mobile devices

--- a/src/components/UI/Modal/Modal.css
+++ b/src/components/UI/Modal/Modal.css
@@ -1,13 +1,13 @@
 .Modal {
     position: fixed;
-    z-index: 1500;
+    z-index: 1;
     background-color: white;
     width: 70%;
     border: 1px solid #ccc;
     box-shadow: 1px 1px 1px black;
     padding: 16px;
     left: 15%;
-    top: 10%;
+    top: 0;
     box-sizing: border-box;
     transition: all 0.3s ease-out;
 }
@@ -16,5 +16,6 @@
     .Modal {
         width: 500px;
         left: calc(50% - 250px);
+        z-index: 1500;
     }
 }
